Se añade una nueva linea

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <p><strong>Hola, soy Kevin Luciano</strong></p>
 <p><em>Apasionado por la tecnolog&iacute;a y el f&uacute;tbol</em></p>
 <p><span style="color: #ff6600">Estoy creando un archivo en HTML</span></p>
+<p><span style="color: #ff6600">Esta es una nueva línea</span></p>
